# CUDA-Bioinformatics

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
linux/: Makefile
src/: fa_read.cpp  fa_read.h  fq_read.cpp  fq_read.h  helloworld.cu  sam_container.h  sam_read.cpp  sam_read.h  util.cpp  util.h
src/cpu/: fa_read.cpp  fa_read.h  fq_read.cpp  fx_parser.cpp  fx_parser.h  fx_util.cpp  fx_util.h  helloworld.cpp  sam_container.cpp  sam_read.cpp  util.cpp  util.h  util_structs.cpp  xam_parser.cpp  xam_parser.h  xam_util.cpp  xam_util.h
src/cpu/headers/: fa_read.h  fq_read.h  fx_parser.h  (+7 more)
src/gpu/: cu_fq_filters.cu  cu_kmers.cu  cu_local_alignment.cu  cu_util.cu  cu_util_structs.cu  fq_filters.cu  global.cu  kmer_hash.cu  kmer_util.cu  local_alignment.cu  util.cu  util_structs.cu  wrappers.cu
tests/: Makefile  fa_read_tests.cpp  fq_read_tests.cpp  fx_parser_tests.cpp  helloworld.cu
tests/cpu/: Makefile  fa_read_tests.cpp  fx_parser_tests.cpp  fx_util_tests.cpp  sam_container_tests.cpp  sam_parser_tests.cpp  sam_read_tests.cpp  sam_to_vcf_empty_out.txt  util_structs_tests.cpp  util_tests.cpp  xam_util_tests.cpp
tests/env/: Makefile  helloworld.cu
tests/fastx/: Makefile  fa_read_tests.cpp  fq_read_tests.cpp  fx_parser_tests.cpp  fx_util_tests.cpp
tests/gpu/: Makefile  all_gpu_tests.cu  cu_util_tests.cu  global_wrappers.cu  test_util.cpp  test_util.cu  test_wrappers.cu  util_structs_tests.cu  util_tests.cu  wrapper_tests.cu
tests/util/: util_structs_tests.cpp  util_tests.cpp
tests/xam/: sam_read_tests.cpp
(+45 files in other folders)
